tests/lexer/string-is-not-terminated.stderr
error: unterminated string
 --> $DIR/string-is-not-terminated.lox:1:1
  |
1 | "unterminated string
  | ^^^^^^^^^^^^^^^^^^^^^
